                                                         -*- coding: utf-8 -*-
<<<<<<< HEAD
Changes with Apache Traffic Server 3.2.1
  *) [TS-1358] Don't link libreadline with all binaries and plugins.

  *) [TS-1373] Silence spurious error when adding SSL certificates with alternate names

  *) [TS-1338] SSL not handling some events properly

  *) [TS-1362] Allow to open cache disk without O_DIRECT, for e.g. tmpfs
   "disk" cache.

  *) [TS-1361] Fix a endless loop in CacheVC::removeEvent.
   Author: weijin & Hua Cai

  *) [TS-1359] Don't assume root privileges during make install.
   Author: Jan-Frode Myklebust

  *) [TS-1357] Don't link libz / liblmza with all binaries and plugins.

  *) [TS-1360] Fix WCCP build issues on FBSD.

  *) [TS-1367] Prevent range acceleration for cluster and objects with
     more than one alternate.


Changes with Apache Traffic Server 3.2.0
  *) [TS-1286] Cleanup some code around freelists and allocators.


Changes with Apache Traffic Server 3.1.4
  *) [TS-1281] make check fail on RHEL 5.x.

  *) [TS-1282] Verbosity settings for Via headers is broken.

  *) [TS-1279] Fix build system for gcc < 4.3.

  *) [TS-1277] Fixed issue with IPv6 URLs and remap configuration.

  *) [TS-1195] Support the use of raw IPv6 address in URLs and Host fields.

  *) [TS-1275] Fix startup problem where /var is on a volatile disk.
   Author: Eric Connell.

  *) [TS-1274] Transformation plugins can send content-length with 
   non-identity transfer encoding. Author: Otto van der Schaff.

  *) [TS-1272] workaround for - FATAL: HttpSM.cc:890: failed assert `0`

  *) [TS-1240] Fix race in log buffer queuing code.

  *) [TS-1271] deprecate INKStats API

  *) [TS-1250] Cache inspector does not seem to work properly

  *) [TS-1269] Building outside source tree fails on plugins.

  *) [TS-1222] single tcp connection will limit the cluster throughput.

  *) [TS-475] Accelerated single range requests.
     Based on initial work by ericb, with help from bwyatt.
