@@ -75,11 +75,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ New patches should be added at the end of the list ]
 
-  *) Cert path not working using intermdiate certificate
-   Trunk patch: 4ed023427a90c0d2bfa9c0c9dab26304f9aaf9fb
-   Jira: https://issues.apache.org/jira/browse/TS-1374
-   +1: jpeach, igalic, zwoop
-
 
 RELEASE PROCESS
 
